--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+# --- Web Scraping ---
 selenium
 webdriver-manager
-pdfplumber
 requests
+beautifulsoup4
+
+# --- Data Processing ---
+pandas
+numpy
+
+# --- File Handling ---
+pdfplumber
+
+# --- Database ---
 sqlalchemy
 psycopg2-binary
