--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,31 @@
 services:
-  db:
-    image: postgres:16
-    container_name: funds_postgres_container
+  mysql_db:
+    image: mysql:8
+    container_name: funds_mysql_container
     environment:
-      POSTGRES_USER: admin # you can change whatever you want
-      POSTGRES_PASSWORD: password # you can change whatever you want
-      POSTGRES_DB: funds_db # name of db
+      MYSQL_ROOT_PASSWORD: 1234 #you can change password for root
     ports:
-      - "5432:5432"
+      - "3306:3306"
+    command: >
+      --innodb_buffer_pool_size=4G
+      --innodb_log_buffer_size=256M
+      --innodb_flush_log_at_trx_commit=2
+      --max_allowed_packet=256M
     volumes:
-      - funds_db_data:/var/lib/postgresql/data 
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-
-  pgadmin:
-    image: dpage/pgadmin4 # you can choose whatever you want to have UI to see database if you want
-    container_name: funds_pgadmin_container
+      - funds_db_mysql:/var/lib/mysql
+  
+  phpmyadmin:
+    image: phpmyadmin
+    container_name: funds_phpmyadmin_container
     environment:
-      PGADMIN_DEFAULT_EMAIL: atom@admin.com # this is my name you can change it
-      PGADMIN_DEFAULT_PASSWORD: admin # you can change
+      PMA_HOST: mysql_db
     ports:
       - "8080:80"
     depends_on:
-      - db
+      - mysql_db
     volumes:
-      - pgadmin_data:/var/lib/pgadmin
+      - phpmyadmin_data:/var/www/html
 
 volumes:
-  funds_db_data:
-  pgadmin_data:
+  funds_db_mysql:
+  phpmyadmin_data:
