--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       --innodb_log_buffer_size=256M
       --innodb_flush_log_at_trx_commit=2
       --max_allowed_packet=256M
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uroot", "-p1234"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
     volumes:
       - funds_db_mysql:/var/lib/mysql
   
